# ed-bot

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/skills/: ed-check.md  ed-ingest.md  ed-status.md
.claude/skills/coding/: SKILL.md
.claude/skills/ed-answer/: SKILL.md
.claude/skills/ed-check/: SKILL.md
.claude/skills/ed-ingest/: SKILL.md
.claude/skills/ed-status/: SKILL.md
.claude/skills/typer-rich-cli/: SKILL.md
docs/: cli.md  index.md  skills.md
docs/engine/: classification.md  drafting.md  guardrails.md  queue.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/ingestion/: canvas.md  contextualize.md  lectures.md  projects.md  threads.md
docs/playbook/: style-guide.md  templates.md
docs/superpowers/plans/: 2026-04-01-ed-bot-impl.md  2026-04-03-thread-tracker.md
docs/superpowers/specs/: 2026-04-01-ed-bot-design.md  2026-04-03-thread-tracker-design.md
src/ed_bot/: __init__.py  config.py  contextualize.py  tracker.py
src/ed_bot/cli/: __init__.py  answer.py  backup.py  contextualize.py  guardrails_cmd.py  index.py  ingest.py  main.py  output.py  review.py  status.py
src/ed_bot/engine/: __init__.py  classifier.py  drafter.py  guardrails.py  templates.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_collections.py  test_config.py  test_contextualize.py  test_drafter.py  test_guardrails.py  test_lecture_ingestion.py  test_markdown.py  test_priority.py  test_project_ingestion.py  test_queue.py  test_retrieval.py  test_templates.py  test_thread_ingestion.py  test_tracker.py
(+19 files in other folders)
